--- a/spring-batch/pom.xml
+++ b/spring-batch/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.tpo.w</groupId>
-		<artifactId>parent</artifactId>
+		<groupId>com.tpo.batch</groupId>
+		<artifactId>spring-batch-playground</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>spring-batch</artifactId>
