--- a/spring-batch/pom.xml
+++ b/spring-batch/pom.xml
@@ -13,14 +13,15 @@
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-core</artifactId>
-			<version>${spring.batch.version}</version>
+			<version>3.0.3.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-infrastructure</artifactId>
-			<version>${spring.batch.version}</version>
+			<version>3.0.3.RELEASE</version>
 		</dependency>
 
 	</dependencies>
+
 </project>
