--- a/spring-jpa/pom.xml
+++ b/spring-jpa/pom.xml
@@ -63,6 +63,11 @@
 			<version>3.6.10.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
 
 	</dependencies>
 
